--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/school?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
